Position return assigned